# Qt_Qml_Projects

./: CMakeLists.txt  CMakeLists.txt.user.f237794  README.md  database_manager.cpp  database_manager.h  homepage.qml  login.qml  main.cpp  main.qml  repositoryhandler.cpp  repositoryhandler.h
